--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         background-color: #000000;
         color: #ffffff
       }
+      a{
+        color: #ffffff
+        text-decoration:none
+      }
     </style>
   </head>
   <body>
