--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
       body{
         font-family: "Press Start 2P";
         background-color: #000000;
-        color: #ffffff
+        color: #ffffff;
       }
       a{
-        color: #ffffff
-        text-decoration:none
+        color: #ffffff;
+        text-decoration: none;
       }
     </style>
   </head>
