--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         color: #ffffff;
         text-decoration: none;
       }
+      button{
+        color: #bbbbbb;
+      }
     </style>
   </head>
   <body>
