--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <p>
     <h1>Some penguinmod projects</h1>
     <button>
-      <a href="OrsoShoot Plus.pmp" download>
+      <a href="Project(3)" download>
         OrsoShoot
       </a>
+      <a href="oldbois.html">old bois</a>
     </button>
     </p>
   </body>
