--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>
     <h1>Some penguinmod projects</h1>
     <button>
-      <a href="Project(3)" download>
+      <a href="Project(3)(1)" download>
         OrsoShoot
       </a>
       <a href="oldbois.html">old bois</a>
