--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         text-decoration: none;
       }
       button{
-        color: #bbbbbb;
+        color: #eeeeee;
       }
     </style>
   </head>
