BETTER INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -1,30 +1,45 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
-      body{
-        font-family: "Press Start 2P";
-        background-color: #000000;
-        color: #ffffff;
-      }
-      a{
-        color: #ffffff;
-        text-decoration: none;
-      }
-      button{
-        color: #eeeeee;
-      }
+        html {
+            font-family: "Press Start 2P", cursive;
+            background-color: #000000;
+            color: #ffffff;
+        }
+        a {
+            color: #ffffff;
+            text-decoration: none;
+        }
+        button {
+            background-color: #aabbcc;
+            color: black;
+            border: none;
+            padding: 10px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+			font-family: "Press Start 2P", cursive;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #ccbbaa;
+        }
     </style>
-  </head>
-  <body>
-    <p>
-    <h1>Some penguinmod projects</h1>
+</head>
+<body>
+    <h1>Some PenguinMod Projects</h1>
+	<h2>Downloads</h2>
     <button>
-      <a href="Project(3)(1)" download>
-        OrsoShoot
-      </a>
+        <a href="Project(3)(1).pmp" download>
+            OrsoShoot
+        </a>
     </button>
-    </p>
-  </body>
+	<h3 style="color: red">WORNUNG</h3>
+	<p>The project below is a MOD.<br>Original: <a href="https://studio.penguinmod.com/#3052785964">https://studio.penguinmod.com/#3052785964</a>
+	</p>
+	<button>
+	<a href="Windows XP Professional V4.1(2).pmp" download>Windows XP Professional v4.1</a>
+</body>
 </html>
