html files woooooo

--- a/index.html
+++ b/index.html
@@ -41,5 +41,14 @@
 	</p>
 	<button>
 	<a href="Windows XP Professional V4.1(2).pmp" download>Windows XP Professional v4.1</a>
+	</button> 
+	<h2>HTML versions</h2>
+	<button>
+		<a href="Project(3).html">OrsoShoot</a>
+	</button>
+	<button>
+		<a href="Windows XP Professional V4.1(2).html">Windows XP Professional v4.1</a>
+	</button>
+
 </body>
 </html>
