--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</button> 
 	<h2>HTML versions</h2>
 	<button>
-		<a href="Project(3).html">OrsoShoot</a>
+		<a href="Project(3)(1).html">OrsoShoot</a>
 	</button>
 	<button>
 		<a href="Windows XP Professional V4.1(2).html">Windows XP Professional v4.1</a>
