--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </head>
 <body>
     <h1>Some PenguinMod Projects</h1>
+	<button><a href="cac.html"><h2>Jeux français</h2></a></button>
 	<h2>Downloads</h2>
     <button>
         <a href="Project(3)(1).pmp" download>
@@ -49,6 +50,6 @@
 	<button>
 		<a href="Windows XP Professional V4.1(2).html">Windows XP Professional v4.1</a>
 	</button>
-
+	
 </body>
 </html>
