--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <h1>Some PenguinMod Projects</h1>
-	<button><a href="cac.html"><h2>Jeux français</h2></a></button>
+	<button><a href="cac.html">Jeux français</a></button>
 	<h2>Downloads</h2>
     <button>
         <a href="Project(3)(1).pmp" download>
